--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,10 +3,10 @@ name: Terraform Automation
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   terraform:
