--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,8 +38,12 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve tfplan | tee apply.log
         working-directory: ./terraform
+
+      - name: View Apply Logs
+        run: cat apply.log
+        if: always()
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
