--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: Terraform Automation
+name: Terraform
 
 on:
   push:
@@ -13,35 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.1.0
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.1.0
 
-      - name: Terraform Init
-        run: terraform init ./terraform
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./terraform
 
-      - name: Terraform Plan
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          terraform plan -out=tfplan ./terraform
-          terraform show -json tfplan > tfplan.json
-        continue-on-error: true
-        env:
-          TF_CLI_ARGS: "-no-color"
+    - name: Terraform Plan
+      run: terraform plan -out=tfplan
+      working-directory: ./terraform
 
-      - name: Terraform Apply
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve tfplan
-        env:
-          TF_CLI_ARGS: "-no-color"
-
-      - name: View Apply Logs
-        if: always()
-        run: cat tfplan.json || echo "No tfplan.json found"
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve tfplan
+      working-directory: ./terraform
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
