--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,12 +31,8 @@ jobs:
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve tfplan
       working-directory: ./terraform
-      run: |
-         cd ./terraform
-         terraform apply -auto-approve tfplan
-      env:
-          TF_CLI_ARGS: "-no-color"
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
